# cryphos-back

./: .dockerignore  .flake8  .gitignore  Caddyfile  Dockerfile  Justfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apis/: collector.py  klines_socket.py  liquidations.py  manage.py  throttling.py
apis/accounts/: admin.py  models.py  serializers.py  signals.py  urls.py  utils.py  validators.py  views.py
apis/accounts/migrations/: 0001_initial.py  0002_user_avatar.py  0003_user_usdt_trc20_wallet.py
apis/apis/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
apis/assets/: admin.py  consumers.py  models.py  routing.py  serializers.py  tests.py  urls.py  views.py
apis/assets/migrations/: 0001_initial.py  0002_alter_quote_unique_together_remove_quote_symbol_and_more.py
apis/bots/: admin.py  models.py  serializers.py  services.py  some_code.py  urls.py  utils.py  views.py
apis/bots/migrations/: 0001_initial.py  0002_emaindicator_fiboindicator_fundingrate_risksettings_and_more.py
apis/core/: fetching_service.py  service.py  task_utils.py  tasks.py
apis/core/management/commands/: bots_pnl.py  calculate_signals.py  clean_assets.py  fg.py  get_klines.py  populate_assets.py  tg.py  websocket.py
